# MicroClimate-HK

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  FEATURES_IMPLEMENTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  start.ps1  start.sh
backend-api/: Dockerfile  README.md  demo_server.py  pyproject.toml  requirements.txt
backend-api/app/: main.py
backend-api/app/api/v1/: alerts.py  forecasts.py  ml.py  sensors.py  weather.py
backend-api/app/core/: config.py
backend-api/app/db/: database.py  models.py
backend-api/app/schemas/: weather.py
backend-api/app/services/: cache.py  ml_service.py  weather_service.py
backend-ingest/: Dockerfile  README.md  go.mod
backend-ingest/cmd/server/: main.go
backend-ingest/internal/config/: config.go
backend-ingest/internal/database/: postgres.go  redis.go
backend-ingest/internal/ingestor/: ingestor.go
backend-ingest/internal/models/: sensor.go
backend-ingest/internal/websocket/: hub.go
database/: README.md  init.sql
docs/: ARCHITECTURE.md  INTEGRATIONS.md  SETUP.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/src/: app.css  app.html
frontend/src/components/alerts/: AlertBar.svelte
frontend/src/routes/: +layout.svelte  +page-enhanced.svelte  +page.svelte
frontend/src/stores/: location.ts  weather.ts
frontend/src/types/: weather.ts
ml-models/: README.md  requirements.txt  train_sensor_fusion.py  train_urban_canyon.py
(+2 files in other folders)
