[tool.poetry]
name = "microclimate-hk-api"
version = "1.0.0"
description = "FastAPI backend for MicroClimate HK weather prediction"
authors = ["MicroClimate HK Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
redis = "^5.0.1"
numpy = "^1.26.3"
pandas = "^2.1.4"
scikit-learn = "^1.4.0"
tensorflow = "^2.15.0"
scipy = "^1.11.4"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
websockets = "^12.0"
aiofiles = "^23.2.1"
geopy = "^2.4.1"
shapely = "^2.0.2"
geopandas = "^0.14.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
